--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "chart.js": "^2.9.3",
+    "font-awesome": "^4.7.0",
     "ngx-useful-swiper": "^9.0.3",
     "rxjs": "~6.4.0",
     "swiper": "^5.4.5",
